--- a/chinese/jogano.css
+++ b/chinese/jogano.css
@@ -330,7 +330,7 @@ h2{
 }
 .image{
 	padding-left: 30%;
-	padding-top: 20%;
+	padding-top: 15%;
 	width:40%;
 	position: absolute;
 }
@@ -373,13 +373,14 @@ h1{
 	color:black;
 	left:0%;
 	width:95%;
-	top:78%;
-	text-align: center;
+	top:80%;
+	text-align: left;
+	padding-left: .7em;
 }
 h3{
-	top:23.4em;
+	top:21.5em;
 	position:relative;
-	font-size:1em;
+	font-size:.9em;
 	left:0;
 	width:95%;
 	opacity: 0.5;
@@ -631,8 +632,8 @@ text-decoration: none;
 }
 
 .introo{
-	position: relative;
-	padding-top: .6em;
+	position: absolute;
+	padding-top: 0em;
 }
 @media screen and (max-width: 850px ){ 
 .parallax2, .parallax3, .parallax4 {
@@ -850,8 +851,9 @@ h2{ position: relative;
 .image{
 	padding-left: 26%;
 	padding-top: 15%;
-	height:60%;
+	width: 45%;
 	position: absolute;
+	padding-top:18%;
 }
 .redwine{
 	top:.6em;
@@ -878,14 +880,14 @@ h1{
 	font-size:1em;
 	left:0%;
 	width:95%;
-	top:78%;
+	top:85%;
 }
 h3{
 	position:relative;
 	font-size:.8em;
 	left:0;
 	width:95%;
-	padding-left: .7em;
+	top:22.5em;
 }
 .cross2{
 	 position:fixed;
@@ -1201,7 +1203,7 @@ h1{
 	font-size:.7em;
 	left:0%;
 	width:95%;
-	top:78%;
+	top:82.5%;
 }
 h3{
 	position:relative;
@@ -1209,18 +1211,13 @@ h3{
 	left:0;
 	width:95%;
 	padding-left: .7em;
+	top:21.5em;
 }
 
 h2{ 
 	font-size:1em;
 }
 
-.image{
-	padding-left: 28%;
-	padding-top: 18%;
-	width:43%;
-	position: absolute;
-}
 
 .filter2{
 	top:3.3em;
